# task-tracker

./: .gitignore  CLAUDE.md  Makefile  README.md  SPECIFICATION.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_update_refresh_tokens.py  003_add_task_enums.py  004_add_event_reminder_enums.py
backend/src/api/: app.py  schemas.py
backend/src/api/middleware/: __init__.py  metrics.py  rate_limit.py  request_logging.py
backend/src/api/v1/: attachments.py  audit.py  auth.py  chat.py  tasks.py
backend/src/core/: config.py  logging.py  metrics.py
backend/src/domain/: __init__.py  entities.py  repositories.py  value_objects.py
backend/src/domain/services/: __init__.py  attachment_service.py  auth_service.py  chat_interpreter.py  (+6 more)
backend/src/infrastructure/: dependencies.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/test_api/: test_attachments.py  test_audit.py  test_auth.py  test_health.py  test_tasks.py
backend/tests/test_auth/: __init__.py  test_jwt_provider.py  test_password.py
backend/tests/test_domain/: test_entities.py
backend/tests/test_repositories/: __init__.py  test_audit_repository.py  test_tag_repository.py  test_task_repository.py  test_user_repository.py
backend/tests/test_services/: test_attachment_service.py  test_auth_service.py  test_chat_service.py  test_reminder_service.py  test_tag_service.py  test_task_service.py
backend/tests/test_utils/: test_config.py
backend/tests/test_worker/: README.md  test_celery_app.py  test_tasks.py
(+64 files in other folders)
